--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ body, html {
   background-size: cover;
   position: relative;
   color: white;
-  font-family: "Courier New", Courier, monospace;
+  font-family: "Arial", sans-sarif;
   font-size: 25px;
 }
 
