--- a/index.html
+++ b/index.html
@@ -43,16 +43,17 @@ hr {
 }
 </style>
 <body>
-
-<div class="bgimg">
-  <div class="topleft">
-    <p>Logo</p>
-  </div>
-  <div class="middle">
-    <h1>COMING SOON</h1>
-    <h2>BMWGrievance.com</h2>
-    <hr>
-  </div>
+<div class="bgimg-overlay">
+  <div class="bgimg">
+    <div class="topleft">
+      <p>Logo</p>
+    </div>
+    <div class="middle">
+      <h1>COMING SOON</h1>
+      <h2>BMWGrievance.com</h2>
+      <hr>
+    </div>
+</div>
   <div class="bottomleft">
     <p>powered by <a href="sprywebtech.com">Spry Web Tech</a></p>
   </div>
