--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>BMWGrievance.com</h2>
-							<p>Coming Soon</p><br />
+							<p>Coming Soon!</p><br />
 							
 
 		<!-- Scripts -->
